--- a/vishivka/services/flex-flok.html
+++ b/vishivka/services/flex-flok.html
@@ -17,13 +17,13 @@
 		 	<div class="row">
 			 	<nav class="nav">
 	 		
-		 			<div class="col-2">
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
 		 				<div class="logo">
 		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
-		 			<div class="col-3 offset-7">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
 		 				<div class="social">
 
 		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
@@ -43,7 +43,7 @@
 	 		</div>
 
 	 		<div class="row">
-	 			<div class="col-10 offset-1">
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
  							<a class="main-link" href="../index.html">Главная</a>
@@ -75,7 +75,7 @@
 	<section class="services">
 	<div class="container">
 		<div class="section-header">
-			<h2 class="title text-start">Услуги</h2>
+			<h2 class="title">Услуги</h2>
 		</div>
 
 		<aside class="side-bar">
@@ -96,46 +96,46 @@
 		</aside>
 
 		<div class="row">
-			<div class="col-9 offset-3">
+			<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 				
-				<img class="services__img" src="../img/flex.jpg" alt="Вышивка">
-				<h3 class="title">Печать флексом, флоком</h3>
+				<img class="services__img" src="../img/flex.jpg" alt="Печать флексом, флоком">
+				<h3 class="title text-center">Печать флексом, флоком</h3>
 				<p class="txt">	Метод печати, основанный на термопереносе специальных пленок, предварительно вырезанных на плоттере. Флекс создает различные гладкие изображения (серебристые, золотистые, цветные и т.п.), а флок — «бархатистые».
 
 	<b>Пленки могут быть с различными эффектами:</b>
-		— металлизированные пленки (золото, серебро, бронза и т.п.);
-		— голографические и светоотражающие;
-		— пленки с тканевой фактурой (например, джинса);
-		— пленки «под кожу» (леопард, змея и др.);
-		— глиттерные;
-		— хамелеоны, которые меняют цвет от освещения;
-		— флок (с приятной «бархатистой» фактурой).
+	— металлизированные пленки (золото, серебро, бронза и т.п.);
+	— голографические и светоотражающие;
+	— пленки с тканевой фактурой (например, джинса);
+	— пленки «под кожу» (леопард, змея и др.);
+	— глиттерные;
+	— хамелеоны, которые меняют цвет от освещения;
+	— флок (с приятной «бархатистой» фактурой).
 
 	В основном используется для нанесения одноцветных принтов, надписей и переменных личных данных (фамилий, номеров).
 
 	Принт получается путем вырезания элементов изображения на двухсторонней термопленке и дальнейшего вычищения ненужных элементов. Затем с помощью термопресса изображения переносятся на текстиль.
 
  	<b>Печать флексом и флоком:</b>
-		— подходит для тиражей от 1 шт.;
+	— подходит для тиражей от 1 шт.;
 
-		— наносится как на хлопок, так и на синтетику 
+	— наносится как на хлопок, так и на синтетику 
 		    (кроме курток и ветровок с пропиткой и изделий из нейлона);
 
-		— выдерживает до 40 стирок.</p>
+	— выдерживает до 40 стирок.</p>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-9 offset-3">
+			<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 				<div class="services__post-block">
 					<div class="row">
-						<div class="col-4">
+						<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 							<img class="services__post-img" src="flex-flok-img/01.jpg" alt="флекс и флок">
 						</div>
-						<div class="col-4">
+						<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 							<img class="services__post-img" src="flex-flok-img/02.jpg" alt="флекс и флок">
 						</div>
-						<div class="col-4">
+						<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 							<img class="services__post-img" src="flex-flok-img/03.jpg" alt="флекс и флок">
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-sm-6 offset-sm-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
