--- a/vishivka/services/shevron.html
+++ b/vishivka/services/shevron.html
@@ -17,13 +17,13 @@
 		 	<div class="row">
 			 	<nav class="nav">
 	 		
-		 			<div class="col-2">
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
 		 				<div class="logo">
 		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
-		 			<div class="col-3 offset-7">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
 		 				<div class="social">
 
 		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
@@ -43,7 +43,7 @@
 	 		</div>
 
 	 		<div class="row">
-	 			<div class="col-10 offset-1">
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
  							<a class="main-link" href="../index.html">Главная</a>
@@ -75,7 +75,7 @@
 	<section class="services">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="title text-start">Услуги</h2>
+				<h2 class="title">Услуги</h2>
 			</div>
 
 			<aside class="side-bar">
@@ -96,30 +96,29 @@
 			</aside>
 
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<img class="services__img" src="../img/shevron.jpg" alt="Шеврон">
-					<h3 class="title">Шеврон</h3>
+					<h3 class="title text-center">Шеврон</h3>
 					<p class="txt">	<b>Шеврон (нашивка)</b> — это тканевый отрезок различной формы с нанесенным изображением.
 
-		<b>Типы шевронов в зависимости от технологии изображения:</b>
+	<b>Типы шевронов в зависимости от технологии изображения:</b>
 
-		<b>1. Сублимационные</b>
-			В качестве основы выступает габардин или фетр, на который с помощью 
-			сублимации чаще всего наносится полноцветное изображение.
+	<b>1. Сублимационные</b>
+		В качестве основы выступает габардин или фетр, на который с помощью сублимации чаще всего наносится полноцветное изображение.
 					</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<div class="services__post-block">
 						<div class="row">
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/sublima-shevron/01.jpg" alt="сублимационный шеврон">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/sublima-shevron/02.jpg" alt="сублимационный шеврон">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/sublima-shevron/03.jpg" alt="сублимационный шеврон">
 							</div>
 						</div>
@@ -128,24 +127,24 @@
 			</div>
 
 		<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 			<p class="txt">	<b>2. Вышитые</b>
-			Изображение вышивается специальными износостойкими нитями. 
-			Данный тип подходит для множества логотипов и текстовой информации.
+		Изображение вышивается специальными износостойкими нитями. 
+		Данный тип подходит для множества логотипов и текстовой информации.
 				</p>
 			</div>
 		</div>
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<div class="services__post-block">
 						<div class="row">
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/01.jpg" alt="шеврон">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/02.jpg" alt="шеврон">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="shevron-img/03.jpeg" alt="шеврон">
 							</div>
 						</div>
@@ -154,25 +153,25 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 		<p class="txt"><b>Также шевроны могут различаться по способу крепления к основе:</b>
 
-		— <b>Пришивные.</b> Шеврон с помощью обметки по периметру крепится к одежде
+	— <b>Пришивные.</b> Шеврон с помощью обметки по периметру крепится к одежде
 			 или изделию;
 
-		— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты)
+	— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты)
 			приклеивается к одежде или изделию;
 
-		— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется
+	— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется
 			для униформы военных или специальных служб.
 
-		<b>Преимущества применения шевронов:</b>
+<b>Преимущества применения шевронов:</b>
 
-		— могут использоваться для тиражей от 1 шт.;
+	— могут использоваться для тиражей от 1 шт.;
 
-		— шеврон имеет презентабельный внешний вид;
+	— шеврон имеет презентабельный внешний вид;
 
-		— получается высококачественное и износостойкое изображение, которое не теряет
+	— получается высококачественное и износостойкое изображение, которое не теряет
 			внешний вид годами.</p>
 				</div>
 			</div>
@@ -192,7 +191,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-sm-6 offset-sm-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
