--- a/vishivka/services/sublimacion.html
+++ b/vishivka/services/sublimacion.html
@@ -17,13 +17,13 @@
 		 	<div class="row">
 			 	<nav class="nav">
 	 		
-		 			<div class="col-2">
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
 		 				<div class="logo">
 		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
-		 			<div class="col-3 offset-7">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
 		 				<div class="social">
 
 		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
@@ -43,7 +43,7 @@
 	 		</div>
 
 	 		<div class="row">
-	 			<div class="col-10 offset-1">
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
  							<a class="main-link" href="../index.html">Главная</a>
@@ -75,7 +75,7 @@
 	<section class="services">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="title text-start">Услуги</h2>
+				<h2 class="title">Услуги</h2>
 			</div>
 
 			<aside class="side-bar">
@@ -96,34 +96,34 @@
 			</aside>
 
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<img class="services__img" src="../img/sublimacion.png" alt="Вышивка">
-					<h3 class="title">Сублимационная печать</h3>
+					<h3 class="title text-center">Сублимационная печать</h3>
 					<p class="txt">	Метод непрямой полноцветной печати на светлых синтетических тканях, содержащих не менее 60% полиэстера, или на изделиях из двуслойных материалов (внутренний слой — хлопок, внешний — полиэстер).
 
-		Изображение сначала наносится на специальную бумагу, а затем с помощью термопресса при температуре 180-200°C на запечатываемую поверхность. Изображения получаются яркими, насыщенными и износостойкими. Краска проникает в волокна, что обеспечивает устойчивость к выцветанию, стиркам и механическим воздействиям. 
+	Изображение сначала наносится на специальную бумагу, а затем с помощью термопресса при температуре 180-200°C на запечатываемую поверхность. Изображения получаются яркими, насыщенными и износостойкими. Краска проникает в волокна, что обеспечивает устойчивость к выцветанию, стиркам и механическим воздействиям. 
 
-		<b>Применение сублимационной печати:</b>
-			— подходит для тиражей от 1 шт.;
+	<b>Применение сублимационной печати:</b>
+	— подходит для тиражей от 1 шт.;
 
-			— позволяет получить износостойкий принт фотографического качества;
+	— позволяет получить износостойкий принт фотографического качества;
 
-			— происходит на изделиях, в составе которых более 60% синтетики.
+	— происходит на изделиях, в составе которых более 60% синтетики.
 			   </p>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<div class="services__post-block">
 						<div class="row">
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="sublimacion-img/01.jpg" alt="сублимация">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="sublimacion-img/02.jpg" alt="сублимация">
 							</div>
-							<div class="col-4">
+							<div class="col-sm-4 offset-sm-0 col-10 offset-1">
 								<img class="services__post-img" src="sublimacion-img/03.jpg" alt="сублимация">
 							</div>
 						</div>
@@ -147,7 +147,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-sm-6 offset-sm-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
