--- a/vishivka/services/shevron.html
+++ b/vishivka/services/shevron.html
@@ -159,11 +159,9 @@
 	— <b>Пришивные.</b> Шеврон с помощью обметки по периметру крепится к одежде
 			 или изделию;
 
-	— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты)
-			приклеивается к одежде или изделию;
+	— <b>Клеевые.</b> Шеврон с помощью промежуточного материала (клеевой ленты) приклеивается к одежде или изделию;
 
-	— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется
-			для униформы военных или специальных служб.
+	— <b>На липучке (контактной ленте).</b> Такой тип крепления чаще всего используется для униформы военных или специальных служб.
 
 <b>Преимущества применения шевронов:</b>
 
@@ -171,8 +169,7 @@
 
 	— шеврон имеет презентабельный внешний вид;
 
-	— получается высококачественное и износостойкое изображение, которое не теряет
-			внешний вид годами.</p>
+	— получается высококачественное и износостойкое изображение, которое не теряет внешний вид годами.</p>
 				</div>
 			</div>
 		</div>
