--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -82,7 +82,7 @@
 				<div class="col-10 offset-1">
 					<h2 class="title">О нас</h2>
 					<p class="txt">	<strong>Студия Vishivka_196</strong> предлагает вам услуги качественной вышивки практически на любых материалах.
-На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
+	На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
 
 	Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика и предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
 						<h3 class="sub-titlе about__sub-title">Преимущества сотрудничества с Vishivka_196:</h3>
@@ -90,8 +90,7 @@
 							<li class="about__item txt">- Свое производство</li>
 							<li class="about__item txt">- Оперативность (в расчетах, сроках, ответах)</li>
 							<li class="about__item txt">- Индивидуальный подход</li>
-							<li class="about__item txt">- Сами занимаемся разработкой дизайнов вышивки,
-    что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
+							<li class="about__item txt">- Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
 							<li class="about__item txt">- Доступные цены.</li>
 							<li class="about__item txt">- Заказы от 1 ед.</li>
 						</ul>
@@ -113,7 +112,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6 offset-sm-6 col-12">
+				<div class="col-md-6 offset-md-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
