--- a/vishivka/portfolio/backpacks.html
+++ b/vishivka/portfolio/backpacks.html
@@ -18,13 +18,13 @@
 		 	<div class="row">
 			 	<nav class="nav">
 	 		
-		 			<div class="col-2">
+		 			<div class="col-md-2 offset-md-0 col-2 offset-1">
 		 				<div class="logo">
 		 					<img class="logo__img" src="../img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
-		 			<div class="col-3 offset-7">
+		 			<div class="col-lg-3 offset-lg-7 col-md-4 offset-md-6 col-7 offset-1">
 		 				<div class="social">
 
 		 					<a class="social__link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
@@ -44,7 +44,7 @@
 	 		</div>
 
 	 		<div class="row">
-	 			<div class="col-10 offset-1">
+	 			<div class="col-md-10 offset-md-1 col-sm-12">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
  							<a class="main-link" href="../index.html">Главная</a>
@@ -77,7 +77,7 @@
 	<section class="portfolio">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="title text-start">Наши работы</h2>
+				<h2 class="title">Наши работы</h2>
 			</div>
 
 			<aside class="side-bar">
@@ -117,7 +117,7 @@
 			</aside>
 
 			<div class="row">
-				<div class="col-9 offset-3">
+				<div class="col-xl-9 offset-xl-3 col-lg-8 offset-lg-4 col-md-7 offset-md-5 col-10 offset-1">
 					<!-- Начало слайдера большой блок -->
 					<div class="portfolio-slider">
 <!-- 01 --><div class="portfolio-slider__item">
@@ -170,7 +170,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-3 offset-9">
+				<div class="col-md-6 offset-md-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
