--- a/vishivka/services/flex-flok.html
+++ b/vishivka/services/flex-flok.html
@@ -118,8 +118,7 @@
  	<b>Печать флексом и флоком:</b>
 	— подходит для тиражей от 1 шт.;
 
-	— наносится как на хлопок, так и на синтетику 
-		    (кроме курток и ветровок с пропиткой и изделий из нейлона);
+	— наносится как на хлопок, так и на синтетику (кроме курток и ветровок с пропиткой и изделий из нейлона);
 
 	— выдерживает до 40 стирок.</p>
 			</div>
@@ -159,7 +158,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6 offset-sm-6 col-12">
+				<div class="col-md-6 offset-md-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
