--- a/vishivka/services/sublimacion.html
+++ b/vishivka/services/sublimacion.html
@@ -147,7 +147,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6 offset-sm-6 col-12">
+				<div class="col-md-6 offset-md-6 col-12">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
