--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -80,8 +80,8 @@
 
 				<div class="col-md-6">
 					<div class="main-wrapper">
-						<h1 class="main__header">Вышивка на заказ!</h1>
-						<p class="main__subtitle">По вашему макету или картинке!</p>
+						<h1 class="main__header">Добро пожаловать в мир исполнения желаний!</h1>
+						<p class="main__subtitle">Вышивка на заказ по вашему макету!</p>
 					</div>
 				</div>
 
