--- a/vishivka/services/flex-flok.html
+++ b/vishivka/services/flex-flok.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Вышивка</title>
+	<meta name="description" content="Добро пожаловать в мир исполнения желаний! Вышивка на заказ по вашему макету в Екатеринбурге!">
+	<meta name="keywords" content="Vishivka, Вышивка, вышивка на заказ по вашему макету, шеврон, печать флексом, флоком">
+	<title>Vishivka</title>
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/uicons-brands.css">
 	<link rel="stylesheet" href="../css/uicons-solid-rounded.css">
@@ -55,7 +57,7 @@
 	 						<a class="main-link main-link_active" href="../services.html">Услуги</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a class="main-link" href="p../ortfolio.html">Наши работы</a>
+	 						<a class="main-link" href="../portfolio.html">Наши работы</a>
 	 					</li>
 	 					<li class="nav-list-item">
 	 						<a class="main-link" href="../info.html">Информация</a>
