--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -5,8 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Stellar - это экосистема из инструментов. Операции с недвижимостью. Оптимизация финансовой нагрузки. Потребительское и ипотечное кредитования. Помощь в восстановлении кредитной истории. Содействие в сложных переговорах.">
 	<meta name="keywords" content="stellar, stellar pro, доходная недвижимость, ипотека, восстановление кредитной истории, агентство недвижимости stellar, стеллар про">
+	<meta name="yandex-verification" content="65db63d3fc19f22d" />
 	<title>Stellar</title>
-	<link rel="icon" href="img/favicon.ico" sizes="16x16">
+	<link rel="icon" href="img/favi120.ico" type="image/x-icon" sizes="120x120">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon" sizes="16x16">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200;400;600;800&display=swap" rel="stylesheet">
@@ -391,10 +393,9 @@
 								</div>
 
 							</div>
-						
+
 				</div>
 			</div>
-
 		</div>
 		<div class="map wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s" id="wrapMap">
 			<iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afcc35f1a09ec5b14db96225ab72de66f9472fe3943fe58ec95fd29127407b291&amp;source=constructor">
