--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Вышивка</title>
+	<meta name="description" content="Добро пожаловать в мир исполнения желаний! Вышивка на заказ по вашему макету в Екатеринбурге!">
+	<meta name="keywords" content="Vishivka, Вышивка, вышивка на заказ по вашему макету, шеврон, печать флексом, флоком">
+	<link rel="icon" href="img/logo120.ico" type="image/x-icon" sizes="120x120">
+	<title>Vishivka_196</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/uicons-brands.css">
 	<link rel="stylesheet" href="css/uicons-solid-rounded.css">
