--- a/vishivka/portfolio/hoody.html
+++ b/vishivka/portfolio/hoody.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Вышивка</title>
+	<link rel="icon" href="img/logo120.ico" type="image/x-icon" sizes="120x120">
+	<title>Толстовки</title>
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/uicons-brands.css">
 	<link rel="stylesheet" href="../css/uicons-solid-rounded.css">
