--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -6,6 +6,15 @@
 	<meta name="description" content="Добро пожаловать в мир исполнения желаний! Вышивка на заказ по вашему макету в Екатеринбурге!">
 	<meta name="keywords" content="Vishivka, Вышивка, вышивка на заказ по вашему макету, шеврон, печать флексом, флоком">
 	<link rel="icon" href="img/logo120.ico" type="image/x-icon" sizes="120x120">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<link rel="manifest" href="img/site.webmanifest">
+	<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#00aba9">
+	<meta name="theme-color" content="#ffffff">
+	<meta name="yandex-verification" content="09f6bc050cdd7dac" />
 	<title>Vishivka_196</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/uicons-brands.css">
