--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -7,8 +7,14 @@
 	<meta name="keywords" content="stellar, stellar pro, доходная недвижимость, ипотека, восстановление кредитной истории, агентство недвижимости stellar, стеллар про">
 	<meta name="yandex-verification" content="65db63d3fc19f22d" />
 	<title>Stellar</title>
-	<link rel="icon" href="img/favi120.ico" type="image/x-icon" sizes="120x120">
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon" sizes="16x16">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+	<link rel="icon" type="image/x-icon" sizes="120x120" href="img/favi120.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<link rel="manifest" href="img/site.webmanifest">
+	<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#00aba9">
+	<meta name="theme-color" content="#ffffff">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200;400;600;800&display=swap" rel="stylesheet">
