--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -9,10 +9,10 @@
 	<title>Stellar</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
 	<link rel="icon" type="image/x-icon" sizes="120x120" href="img/favi120.ico">
+	<link rel="icon" type="image/svg" sizes="120x120" href="img/logo-black.svg">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="img/site.webmanifest">
-	<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#00aba9">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -347,9 +347,9 @@
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
 						<form action="telegram.php" method="POST">
 							<label for="name">Ваше имя<sup>*</sup></label>
-							<input id="name" type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]+" title="Поле должно содержать только русские буквы" autocomplete="off">
+							<input id="name" type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]{2,20}" title="Поле должно содержать только русские буквы!" autocomplete="off">
 							<label for="phone">Ваш номер<sup>*</sup></label>
-							<input id="phone" type="number" name="user_phone" placeholder="8 999 999 99 99" required autocomplete="off">
+							<input id="phone" type="tel" name="user_phone" placeholder="8 999 999 99 99" required pattern="[0-9]{11}" title="Поле должно содержать 11 цифр телефона!" autocomplete="off">
 							<label for="email">Ваш e-mail</label>
 							<input id="email" type="email" name="user_email" placeholder="sales@stellar-pro.org" autocomplete="off">
 							<button class="all-btn" type="submit">Отправить</button>
@@ -394,7 +394,7 @@
 
 								<div class="col-lg-6 col-12">	
 									<div class="contacts__block-vk">
-										<a class="contacts__block-img-link" href="https://vk.com/lipatov_money_vk"><img src="img/andrey.webp" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/lipatov_money_vk">Андрей&nbsp;Липатов</a></span>
+										<a class="contacts__block-img-link" href="https://vk.com/lipatov_stellarpro"><img src="img/andrey.webp" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/lipatov_stellarpro">Андрей&nbsp;Липатов</a></span>
 									</div>
 								</div>
 
