--- a/vishivka/info.html
+++ b/vishivka/info.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="img/logo120.ico" type="image/x-icon" sizes="120x120">
+	<link rel="icon" href="img/logo.svg" type="image/svg" sizes="120x120">
 	<title>Информация</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/uicons-brands.css">
@@ -157,12 +158,12 @@
 					<form action="telegram.php" method="POST" class="popup-form">
 
 						<div class="input-box">
-							<input type="text" id="name" name="user_name" class="popup-form-input" pattern="[а-яА-Я]+" title="Поле должно содержать только русские буквы" required autocomplete="off"><i class="fi popup-form__fi fi-sr-picpeople-filled"></i>
+							<input type="text" id="name" name="user_name" class="popup-form-input" pattern="[а-яА-Я]{2,20}" title="Поле должно содержать только русские буквы!" title="Поле должно содержать только русские буквы" required autocomplete="off"><i class="fi popup-form__fi fi-sr-picpeople-filled"></i>
 							<label for="name" class="popup-form-label">Ваше имя</label>
 						</div>
 
 						<div class="input-box">
-							<input type="number" id="phone" name="user_phone" class="popup-form-input" required autocomplete="off"><i class="fi popup-form__fi fi-sr-call-incoming"></i>
+							<input type="tel" id="phone" name="user_phone" class="popup-form-input" pattern="[0-9]{11}" title="Поле должно содержать 11 цифр телефона!" required autocomplete="off"><i class="fi popup-form__fi fi-sr-call-incoming"></i>
 							<label for="phone" class="popup-form-label">Ваш телефон</label>
 						</div>
 
