--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -350,8 +350,8 @@
 							<input id="name" type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]{2,20}" title="Поле должно содержать только русские буквы!" autocomplete="off">
 							<label for="phone">Ваш номер<sup>*</sup></label>
 							<input id="phone" type="tel" name="user_phone" placeholder="8 999 999 99 99" required pattern="[0-9]{11}" title="Поле должно содержать 11 цифр телефона!" autocomplete="off">
-							<label for="email">Ваш e-mail</label>
-							<input id="email" type="email" name="user_email" placeholder="sales@stellar-pro.org" autocomplete="off">
+							<!-- <label for="email">Ваш e-mail</label>
+							<input id="email" type="email" name="user_email" placeholder="sales@stellar-pro.org" autocomplete="off"> -->
 							<button class="all-btn" type="submit">Отправить</button>
 						</form>
 					</div>
